added tmux.conf to the install script

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+#Use ZSH
+set-option -g default-shell /usr/bin/zsh
 #Enable mouse support
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
